# worldcup2026-etl-pipeline-

./: .dockerignore  .env.example  .gitignore  Dockerfile.airflow  LICENSE  README.md  config.py  docker-compose.airflow.yml  docker-compose.yml  extract.py  load.py  pyproject.toml  run.py  schema.sql
.github/workflows/: ci.yml
airflow/dags/: worldcup_pipeline.py
src/worldcup_pipeline/: __init__.py  config.py  extract.py  load.py  quality.py  run.py  run_tracking.py  transform.py
tests/: test_airflow_dag.py  test_load_contract.py  test_quality.py  test_transform.py
tests/integration/: test_postgres_schema.py
