[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worldcup-pipeline"
version = "0.3.0"
description = "World Cup 2026 ETL pipeline - football-data.org to PostgreSQL"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "requests",
  "psycopg2-binary",
  "python-dotenv",
]

[project.scripts]
worldcup-sync = "worldcup_pipeline.run:main"

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.0",
  "ruff>=0.6",
  "types-requests>=2.32",
]

[tool.hatch.build.targets.wheel]
packages = ["src/worldcup_pipeline"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "integration: tests that require an explicit PostgreSQL test database",
]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.mypy]
python_version = "3.11"
files = ["src/worldcup_pipeline", "tests"]
ignore_missing_imports = true
warn_unused_ignores = true
